tools/tests/errors/semver_invalid.ki
var semver = import("semver")
discard semver.parse("not-a-version")
